--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-attd-test-project/target/classes/com/example/App.class
-hellocucumber/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
-hellocucumber/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
-hellocucumber/target/surefire-reports/hellocucumber.RunCucumberTest.txt
-hellocucumber/target/surefire-reports/TEST-hellocucumber.RunCucumberTest.xml
-hellocucumber/target/test-classes/hellocucumber/example.feature
-hellocucumber/target/test-classes/hellocucumber/RunCucumberTest.class
-hellocucumber/target/test-classes/hellocucumber/StepDefinitions.class
-attd-test-project/target/classes/com/example/App.class
-attd-test-project/target/test-classes/com/example/AppTest.class
+attd-test-project/target/*
+hellocucumber/target/*
+*.class
